--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -2,13 +2,16 @@ name: Update WakaTime Stats
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Exécution tous les jours à minuit UTC
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+      - name: Update WakaTime Stats
+        uses: athul/waka-readme@master
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
