--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -5,13 +5,14 @@ on:
     - cron: '0 0 * * *'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
       - name: Update WakaTime Stats
         uses: athul/waka-readme@master
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
